	 via 0.299r+0.587g+0.114b rather than 0.333r+0.333g+0.333b.
20030919 rzx.c: prevent RZX recording being stopped twice under widget UIs.
20030919 rzx.c: make sure an RZX file is allocated when we try and do
	 anything with it.
20030919 rzx.c: count the 'expected time' in 1/50ths of a second, rather
	 than repeated adds of 0.02; avoids rounding errors.
20030922 rzx.c: start timing measurements after a 1s delay to avoid
         transients.
20030923 fuse.c, rzx.c, widget/menu.c: port RZX bugfixes from HEAD
	 (Release-0_6_1-branch)
20030923 ChangeLog, README, configure.in, man/fuse.1: updates for 0.6.1.1
	 release (Release-0_6_1-branch)
20030930 ChangeLog, README, man/fuse.1: put in release date for 0.6.1.1
	 (Release-0_6_1-branch).
20031001 ChangeLog, README, man/fuse.1: port 0.6.1.1 changes to HEAD.
20031003 configure.in: bump version number to 0.6.1.1 (missed when porting
	 the 0.6.1.1 changes to HEAD).
20031004 timer.c: remove duplicated Win32 code (Marek)
20031004 tape.c, tape.h: make tape and tape_playing static.
20031004 tape.c, ui/ui.h, ui/gtk: add very simple statusbar showing tape
	 status.
20031004 ui/gtk: merge gtkdisplay.h, gtkkeyboard.h and gtkui.h into
	 gtkinternals.h.
20031004 specplus3.c, ui/ui.h, ui/gtk: add disk motor indicator to the
	 status bar.
20031005 specplus3.c, tape.c, ui/ui.h, ui/gtk: better encapsulation of the
	 status bar routines.
20031005 machine.c, ui/ui.h, ui/gtk/statusbar.c: add a 'not available'
	 state for the disk statusbar item.
20031005 dck.c, machine.c, rzx.c, specplus3.c, trdos.c, ui/ui.h,
	 ui/gtk/gtkui.c: better encapsulation of the menu activation
	 routines.
20031005 widget/menu.c, widget/widget.c: use the new statusbar and menu
	 activation routines.
20031006 specplus3.c: if emulating a +2A, don't update the status of the
	 disk motor when the +2A/+3 memory port is written to.
20031006 machine.c: remove duplicated code from machine_select_machine()
20031006 settings.pl: change config file name to 'fuse.cfg' on Win32